--- a/examples/elevenlabs-nextjs/package.json
+++ b/examples/elevenlabs-nextjs/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^4.1.0",
     "elevenlabs": "^1.54.0",
     "iron-session": "^8.0.4",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.475.0",
     "nanoid": "^5.1.5",
     "next": "15.2.4",
